@@ -1,0 +1,2 @@
+Remove use of githubredir - see https://lists.debian.org/debian-devel-announce/2014/10/msg00000.html for details.
+Fixed-Lintian-Tags: debian-watch-file-uses-deprecated-githubredir
