@@ -4,6 +4,7 @@ lintian-brush (0.22) UNRELEASED; urgency=medium
     for repo URLs.
   * Support upgrading from --no-restart-on-upgrade
   * Fix guessing from launchpad URLs.
+  * Add fixer for debian-watch-file-uses-deprecated-githubredir.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 10 Aug 2019 16:49:28 +0000
 
